# cookiecutter-pypackage-poetry

./: .envrc  .gitignore  README.rst  cookiecutter.json
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: .envrc  .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  appveyor.yml  make.ps1  powerBump.ps1  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/docs/: conf.py  installation.rst
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/: .envrc  .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py  installation.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
