[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
license = "GPL-3.0"

readme = "README.rst"

repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
{% if cookiecutter.document_publisher == 'ReadTheDocs' %}
homepage = https://{{ cookiecutter.project_slug | replace("_", "-") }}.readthedocs.io.
{% else %}
homepage = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_name }}"
{% endif %}

packages = [
    { include = "{{ cookiecutter.project_slug }}", from = "src" },
]

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]
bump2version = "^0.5.3"
wheel = "^0.32.1"
watchdog = "^0.9.0"
flake8 = "^3.5.0"
tox = "^3.5.2"
coverage = "^4.5.1"
Sphinx = "^1.8.1"
twine = "^1.12.1"
pytest = "^3.8.2"
pytest-runner = "^4.2"
setuptools = "^40.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
