[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.open_source_license }}"

readme = "README.rst"

repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
{% if cookiecutter.document_publisher == 'ReadTheDocs' %}
homepage = "https://{{ cookiecutter.project_slug | replace("_", "-") }}.readthedocs.io"
{% else %}
homepage = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_slug }}"
{%- endif %}

packages = [
    { include = "{{ cookiecutter.project_slug }}", from = "."},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
[tool.poetry.dependencies]
# List project dependencies here
{% if cookiecutter.command_line_interface == "Click" -%}
click = "^7.0"{% endif %}

[tool.poetry.dev-dependencies]
bump2version = "^0.5.0"
pip = "^18.1"
wheel = "^0.32.1"
watchdog = "^0.9.0"
flake8 = "^3.5.0"
tox = "^3.5.2"
coverage = "^4.4.2"
Sphinx = "^1.8.1"
twine = "^1.12.1"
{% if cookiecutter.use_pytest == "y" -%}
pytest = "^3.8.2"
pytest-runner = "^4.2"
pytest-cov = "^2.6.0"{% endif %}
setuptools = "^40.5.0"
rstcheck = "^3.3.1"
ptpython = "^2.0.4"
